<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WinMall</string>
    <string name="hello">Hello</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"> SignUp</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="home">HOME</string>
    <string name="sector">SECTOR</string>
    <string name="location">LOCATION</string>
    <string name="inbox">INBOX</string>
    <string name="me">ME</string>
    <string name="action_settings">Setting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user">User</string>
    <string name="welcome">Welcome</string>
    <string name="home_small">Home</string>
    <string name="rebate_half">Rebate 50%</string>
    <string name="rebate_full">Rebate 100%</string>
    <string name="near_me">Near Me</string>
    <string name="my_order">My Order</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_cart">My Cart</string>
    <string name="introducer_qr">Introducer QR</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="payment_qr">Payment QR</string>
    <string name="loylty_programme">Loyalty Programme</string>
    <string name="e_voucher">E-Voucher</string>
    <string name="news">News</string>
    <string name="become_merchant">Become A Merchant</string>
    <string name="user_guide">User Guide</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="events">Events</string>
    <string name="terms_use">Terms of Use</string>
    <string name="help">Help</string>
    <string name="logout">Log Out</string>
    <string name="top_category">Top Category</string>
    <string name="todays_deals">Today\'s Deals</string>
    <string name="specials">Specials</string>
    <string name="best_selling">Best Selling</string>
    <string name="loading">Loading...</string>
    <string name="best_merchant_with_100_rebate">Best Merchant With 100% Rebate</string>
    <string name="best_merchant_with_50_rebate">Best Merchant With 50% Rebate</string>
    <string name="see_all_menu">See all menu   </string>
    <string name="current_location">Current Location</string>
    <string name="model">Modal</string>
    <string name="color">Color</string>
    <string name="brand">Brand</string>
    <string name="net_weight">Net Weight</string>
    <string name="scent_flaver">Scent Flavor</string>
    <string name="efficancy_purpose">Efficancy Purpose</string>
    <string name="Material">Material</string>
    <string name="packaging">Packaging</string>
    <string name="dimension">Dimension/Volume</string>
    <string name="region">Region</string>
    <string name="patent_registered">Patent Registered</string>
    <string name="imported">Imported </string>
    <string name="certificate">Certificate</string>
    <string name="size">Size</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="best_merchant_100_rebate">Best Merchant : 100% Rebate</string>
    <string name="best_merchant_50_rebate">Best Merchant : 50% Rebate</string>
    <string name="sector_small">Sector</string>
    <string name="new_">New</string>
    <string name="now">Now</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="introducer_sentence">Please enter introducer\'s name and mobile no. to entitle for special discounts and promotions.</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="my_credit_balance">My Credit Balance</string>
    <string name="last_transaction">Last Transaction</string>
    <string name="view_credit_uses">View Credit Uses</string>
    <string name="view_full_transaction">View full transaction</string>
    <string name="introducer_name">Introducer\'s Name</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="redeem">Redeem</string>
    <string name="become_a_merchant">Become A Merchant</string>
    <string name="fill_in_the_details_as_per_registered_ssm_information">Fill in the details as per registered SSM information</string>
    <string name="company_name">Company Name</string>
    <string name="person_in_charge">Person in charge</string>
    <string name="contact_no">Contact No.</string>
    <string name="upload_certificate_of_company_registration">Upload certificate of company registration ( jpeg, png )</string>
    <string name="upload_product_photos_minimum_picture">Upload product photos minimum 3 pictures ( jpeg, png ) </string>
    <string name="submit">Submit</string>
    <string name="tap_on_the_topic_to_download_and_view_PDF_file">Tap on the topic to download and view PDF file</string>
    <string name="contact_us">Contact Us</string>
    <string name="you_have_some_connectivity_issue">You Have Some Connectivity Issue..</string>
    <string name="low_con">Low Internet Connection!!!</string>
    <string name="no_product">No Product Found</string>
    <string name="last">Last</string>
    <string name="please_enter_email_id">Please enter email Id</string>
    <string name="send">Send</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="login_fb">Login With Facebook</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of Birth</string>
    <string name="ok">Ok</string>
    <string name="app_exit">Are you sure you want to exit from WinMall?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="choose_gallery">Choose From Gallery</string>
    <string name="choose_image">Choose Image Source</string>
    <string name="or">Or</string>
    <string name="take_photo">Take Image</string>
    <string name="inbox_details">Inbox Details</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="no_record_found">No record found</string>
    <string name="open_now">Open Now</string>
    <string name="close_now">Close Now</string>
    <string name="merchant_location">Merchant Location</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDaCSzsvhhiWhfaNLrzHiefI-yLy_esi9w</string>
    <string name="text1_refral_qr">Please enter referral\'s name and mobile number</string>
    <string name="text2_refral_qr">to entitle for special discounts and promotions.</string>
    <string name="confirm">Confirm</string>
    <string name="scan_qr">Scan Qr</string>
    <string name="text3_refral_qr">Please show Referral\'s QR code to entitle</string>
    <string name="text4_refral_qr">for special discounts at selected outlets</string>
    <string name="scan_qr_code">Scan Qr Code</string>
    <string name="refral_message">You do not have any introducer yet</string>
    <string name="cancel">Cancel</string>
    <string name="gps_message">Please allow your GPS</string>
    <string name="gps_location">GPS location</string>
    <string name="allow_gps">Allow GPS</string>
    <string name="news_details">News Details</string>
</resources>