<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home_small" />

        <item
            android:id="@+id/rebate_half"
            android:icon="@drawable/rebate"
            android:title="@string/rebate_half" />

        <item
            android:id="@+id/rebate_full"
            android:icon="@drawable/rebate"
            android:title="@string/rebate_full" />

        <item
            android:id="@+id/near_me"
            android:icon="@drawable/location"
            android:title="@string/near_me" />

        <item
            android:id="@+id/my_order"
            android:icon="@drawable/my_order"
            android:title="@string/my_order" />

        <item
            android:id="@+id/my_wishlist"
            android:icon="@drawable/wishlist"
            android:title="@string/my_wishlist" />

        <item
            android:id="@+id/my_cart"
            android:icon="@drawable/shopping_cart"
            android:title="@string/my_cart" />

        <item
            android:id="@+id/introducer_qr"
            android:icon="@drawable/qr_icon"
            android:title="@string/introducer_qr" />


        <item
            android:id="@+id/e_wallet"
            android:icon="@drawable/wallet"
            android:title="@string/e_wallet" />

        <item
            android:id="@+id/payment_qr"
            android:icon="@drawable/qr_icon"
            android:title="@string/payment_qr" />

        <item
            android:id="@+id/loylty_programme"
            android:icon="@drawable/loyalty"
            android:title="@string/loylty_programme" />

        <item
            android:id="@+id/e_voucher"
            android:icon="@drawable/voucher"
            android:title="@string/e_voucher" />

        <item
            android:id="@+id/news"
            android:icon="@drawable/news"
            android:title="@string/news" />

        <item
            android:id="@+id/become_merchant"
            android:icon="@drawable/merchant"
            android:title="@string/become_merchant" />

        <item
            android:id="@+id/user_guide"
            android:icon="@drawable/user_guide"
            android:title="@string/user_guide" />

        <item
            android:id="@+id/language"
            android:icon="@drawable/language"
            android:title="@string/language" />


        <item
            android:id="@+id/about_us"
            android:icon="@drawable/about"
            android:title="@string/about_us" />

        <item
            android:id="@+id/contact"
            android:icon="@drawable/contact"
            android:title="@string/contact" />

        <item
            android:id="@+id/events"
            android:icon="@drawable/event"
            android:title="@string/events" />

        <item
            android:id="@+id/terms_use"
            android:icon="@drawable/terms_condition"
            android:title="@string/terms_use" />

        <item
            android:id="@+id/help"
            android:icon="@drawable/help"
            android:title="@string/help" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_"
            android:title="@string/logout" />

    </group>
</menu>
