<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/logo"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:orientation="vertical"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/logo"
    android:id="@+id/layoutHead"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/btn_gray_radious">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/username"
            android:background="@null"
            android:textSize="15sp"
            android:inputType="text"
            android:id="@+id/username_text"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:backgroundTint="@android:color/transparent"
            android:textColorHint="@color/light_gray"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/btn_gray_radious"
        android:layout_marginTop="20dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/password_text"
            android:background="@null"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:textColorHint="@color/light_gray"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:id="@+id/login"
        android:background="@drawable/btn_light_green"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:id="@+id/fb_login"
        android:text="@string/login_fb"
        android:drawableLeft="@drawable/fb_icon"
        android:background="@drawable/btn_blue"
        android:paddingLeft="20dp"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"/>
</LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutHead"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:id="@+id/signupLinear">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/light_gray"
        android:text="@string/dont_have_an_account"
        android:textSize="18sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/signup1"
        android:text="@string/sign_up"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:textColor="@color/light_blue"/>
        </LinearLayout>

        <com.tuyenmonkey.mkloader.MKLoader
            android:layout_width="150sp"
            android:layout_height="150sp"
            app:mk_type="LineSpinner"
            android:id="@+id/loader"
            android:visibility="gone"
            android:layout_marginTop="160sp"
            android:layout_centerHorizontal="true"
            app:mk_color="@color/light_green"
            />
    </RelativeLayout>
</ScrollView>