<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="250sp"
            android:layout_height="60dp"
            android:src="@drawable/logo"
            android:layout_marginTop="20sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/logo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:layout_marginTop="20sp"
            android:layout_below="@+id/logo"
            android:id="@+id/layoutHead"
            android:layout_marginLeft="30sp"
            android:layout_marginRight="30sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:background="@drawable/btn_gray_radious">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/username"
                    android:id="@+id/username"
                    android:inputType="text"
                    android:background="@null"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:backgroundTint="@android:color/transparent"
                    android:textColorHint="@color/light_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:layout_marginTop="15sp"
                android:background="@drawable/btn_gray_radious">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/mobile_no"
                    android:background="@null"
                    android:id="@+id/mobile"
                    android:inputType="number"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    android:textColor="@color/black"
                    android:backgroundTint="@android:color/transparent"
                    android:textColorHint="@color/light_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:layout_marginTop="15sp"
                android:background="@drawable/btn_gray_radious">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:hint="@string/email"
                    android:id="@+id/email"
                    android:textSize="15sp"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:backgroundTint="@android:color/transparent"
                    android:textColorHint="@color/light_gray"/>
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:orientation="horizontal"
                android:layout_below="@+id/text"
                android:layout_marginTop="15sp"
                android:background="@drawable/btn_gray_radious"
                android:layout_centerHorizontal="true">

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:buttonTint="@color/light_green"
                    android:paddingLeft="20dp"
                    android:textColor="@color/light_gray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="30dp"
                    />

                <RadioButton
                    android:id="@+id/radioFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Female"
                    android:layout_gravity="center_vertical"
                    android:buttonTint="@color/light_green"
                    android:paddingLeft="20dp"
                    android:textColor="@color/light_gray"
                    android:layout_marginLeft="50dp"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:layout_marginTop="15sp"
                android:background="@drawable/btn_gray_radious">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:hint="@string/dob"
                    android:id="@+id/dob"
                    android:textSize="15sp"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:backgroundTint="@android:color/transparent"
                    android:textColorHint="@color/light_gray"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45sp"
                android:background="@drawable/btn_gray_radious"
                android:layout_marginTop="15sp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:hint="@string/password"
                    android:id="@+id/password"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:background="@null"
                    android:layout_gravity="center"
                    android:backgroundTint="@android:color/transparent"
                    android:textColorHint="@color/light_gray"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textColor="@color/white"
                android:text="@string/sign_up"
                android:id="@+id/sign_up"
                android:background="@drawable/btn_light_green"
                android:layout_marginTop="30sp"
                android:textAllCaps="false"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/layoutHead"
            android:layout_marginLeft="60sp"
            android:id="@+id/signinLinear"
            android:layout_marginTop="20sp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_gray"
            android:text="@string/already_have_an_account"
            android:textSize="18sp"
            android:id="@+id/signin1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:paddingLeft="10sp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/light_blue"/>
        </LinearLayout>

        <com.tuyenmonkey.mkloader.MKLoader
            android:layout_width="150sp"
            android:layout_height="150sp"
            app:mk_type="LineSpinner"
            android:id="@+id/loader"
            android:visibility="gone"
            android:layout_marginTop="160sp"
            android:layout_centerHorizontal="true"
            app:mk_color="@color/light_green"
            />
    </RelativeLayout>
</ScrollView>